<resources>
    <string name="app_name">GitHubClient</string>

    <string name="auth_title">Authorization</string>
    <string name="auth_login_hint">Login</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_enter">Enter</string>
    <string name="auth_login_error">Enter login</string>
    <string name="auth_password_error">Enter password</string>
    <string name="auth_error">Authorization Error</string>

    <string name="repositories_title">Repositories</string>
    <string name="repositories_empty">You dont have any repository yet</string>
    <string name="repositories_error">Error occurs during getting repository</string>

    <string name="commits_empty">There are not commits for this repository</string>
    <string name="commits_error">Error occurs during getting repository</string>

    <string name="loading">Loading…</string>
    <string name="logout">Logout</string>
</resources>
